--- a/MassAutoGarage/Views/HRMS_Department/Department.cshtml
+++ b/MassAutoGarage/Views/HRMS_Department/Department.cshtml
@@ -1,10 +1,13 @@
-﻿@model MassAutoGarage.Models.CompanyMasterModel
+﻿@model MassAutoGarage.Models.HRMS_Department.HRMSDepartmentModel
+
 @{
     ViewBag.Title = "Department";
     ViewBag.pTitle = "Department Master";
     ViewBag.pageTitle = "Forms";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+
 
 @section styles{
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
@@ -162,375 +165,109 @@
     }
 </style>
 <!-- New Dive-->
+@using (Html.BeginForm("Department", "HRMS_Department", FormMethod.Post, new { enctype = "multipart/form-data", OnSubmit = "return ValidationForm()", @class = "form-validate", @id = "myformid" }))
+{
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="card">
-
-
-            <div class="card-header main-f">
-                <div class="row">
-                    <div class="col-md-12 col-12"> <h5 class="card-title mb-0 gp-detail">HRMS-DEPARTMENT</h5></div>
-                    @*<div class="col-md-6 col-7">
-                        <a href="@Url.Action("Index", "CompanyMaster")" class="btn btn-primary add-new" style="float:right;" tabindex="1"> <i class="fa fa-arrow-left align-middle me-1"></i> Back To Company List</a>
-                    </div>*@
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
 
 
-            <!--<div class="card-header align-items-center d-flex">
-        <h4 class="card-title mb-0 flex-grow-1">HRMS-DEPARTMENT </h4>
-        <div class="flex-shrink-0">-->
-            @*<div class="form-check form-switch form-switch-right form-switch-md">
-            <a href="@Url.Action("Index", "CompanyMaster")" class="btn btn-primary" style="float:right;" tabindex="12"><i class="fa fa-list" aria-hidden="true"></i> Back To Company List</a>
-        </div>*@
-            <!--</div>
-    </div>-->
-            <!-- end card header -->
-            <div class="card-body">
-                <div class="live-preview">
-                    <div class="row gy-4">
-                        <div class="col-xxl-3 col-md-4">
-                            <div>
-                                <label for="basiInput" class="form-label">Department <code>*</code></label>
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="col-xxl-3 col-md-4">
-                            <div>
-                                <input type="button" id="btnsave" value="Save" class="btn btn-success" style=" margin-top: 8%;" />
-                            </div>
-                        </div>
-                        <!--end col-->
-                        <div class="col-xxl-12 col-md-12">
-                            <div class="table-responsive">
-
-                                <table border="1" id="example" class="display table table-bordered mobile-optimised" style="width:100%;">
-                                    <thead>
-                                        <tr>
-                                            <th style=" width: 5%;">S.N.</th>
-                                            <th>Department Name</th>
-                                            <th style="width:15%">Action</th>
-
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-
-                                        <tr>
-                                            <td data-th="S.N.">
-                                            </td>
-                                            <td data-th="Department Name">
-                                            </td>
-
-                                            <td data-th="Active">
-
-                                                <div class="d-flex gap-2">
-                                                    <div class="edit">
-                                                        <a href="/CompanyMaster/Company?Id" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
-
-                                                    </div>
-                                                    <div class="remove">
-                                                        <a href="#" class="btn btn-sm btn-danger remove-item-btn" id="btnDelete" tabindex="7">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
-
-
-                                                    </div>
-                                                </div>
-
-                                            </td>
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-
-
-
-
-
-                            </div>
-                        </div>
-
-                        <div class="col-xxl-12 col-md-12">
-                            <div class="form-floating" style="float:right;">
-
-
-
-                            </div>
-                        </div>
-                        <!--end col-->
+                <div class="card-header main-f">
+                    <div class="row">
+                        <div class="col-md-12 col-12"> <h5 class="card-title mb-0 gp-detail">HRMS-DEPARTMENT</h5></div>
+                        @*<div class="col-md-6 col-7">
+                                <a href="@Url.Action("Index", "CompanyMaster")" class="btn btn-primary add-new" style="float:right;" tabindex="1"> <i class="fa fa-arrow-left align-middle me-1"></i> Back To Company List</a>
+                            </div>*@
                     </div>
-                    <!--end row-->
                 </div>
 
+                <!-- end card header -->
+                <div class="card-body">
+                    <div class="live-preview">
+                        <div class="row gy-4">
+                            <div class="col-xxl-3 col-md-4">
+                                <div>
+                                    <label for="basiInput" class="form-label">Department <code>*</code></label>
+                                    @Html.HiddenFor(m => m.DeptID, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.DepartmentName, new { @class = "form-control", tabindex = 1 })
+                                    @Html.ValidationMessageFor(m => m.DepartmentName, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
+                                </div>
+                            </div>
+                            <div class="col-xxl-3 col-md-4">
+                                <div>
+
+                                    <input type="button" id="btnSave" value="Save" class="btn btn-success" style=" margin-top: 10%;" />
+                                </div>
+                            </div>
+                            <!--end col-->
+                            <div class="col-xxl-12 col-md-12">
+                                <div class="table-responsive">
+
+                                    <table border="1" id="example" class="display table table-bordered mobile-optimised" style="width:100%;">
+                                        <thead>
+                                            <tr>
+                                                <th style=" width: 5%;" class="DeptID">S.N.</th>
+                                                <th class="DepartmentName">Department Name</th>
+                                                <th style="width:15%">Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="tBody3">
+                                        </tbody>
+                                    </table>
+
+
+
+
+
+                                </div>
+                            </div>
+
+                            <div class="col-xxl-12 col-md-12">
+                                <div class="form-floating" style="float:right;">
+
+
+
+                                </div>
+                            </div>
+                            <!--end col-->
+                        </div>
+                        <!--end row-->
+                    </div>
+
+                </div>
             </div>
         </div>
+        <!--end col-->
     </div>
-    <!--end col-->
-</div>
 
 
+}
 @section scripts{
     <!-- prismjs plugin -->
     <script src="~/assets/libs/prismjs/prism.js"></script>
-    <script src="~/assets/js/pages/form-validation.init.js"></script>
-    <script src="~/assets/js/app.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-    <script src="~/assets/js/pages/select2.init.js"></script>
-    <script src="~/assets/libs/prismjs/prism.js"></script>
+    <!-- App js -->
     <script src="~/assets/js/app.js"></script>
 
 }
-@*<script src="~/Scripts/jquery-3.4.1.min.js"></script>*@
-<script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-@*<script src="~/Content/js/jquery.min.js"></script>*@
+<script src="~/MyApp/HRMS_AddDepartment.js"></script>
+
 
 <script>
     $(document).ready(function () {
 
-
-
-    });
-
-
-
-
-
-    $('#TRN').keypress(function (e) {
-        debugger;
-        if (String.fromCharCode(e.keyCode).match(/[^0-9]/g)) return false;
-    });
-
-
-    var maxLength = 50;
-    $('#CompanyName').change(function () {
-        debugger;
-        var textlen = $(this).val().length;
-
-        if (textlen > maxLength) {
-
-            $('#CompanyName').val("");
-            swal("Warning", " Accept only 50 Character !", "warning");
-
-        } else {
-
-        }
-
-    });
-
-    var maxLength2 = 20;
-    $('#TRN').change(function () {
-        debugger;
-        var textlen = $(this).val().length;
-
-        if (textlen > maxLength2) {
-
-            $('#TRN').val("");
-            swal("Warning", " Accept only 20 Character !", "warning");
-
-        } else {
-
-        }
-
-    });
-
-    $('#CompanyName').keypress(function (e) {
-        debugger;
-        var regex = new RegExp("^[a-zA-Z ]+$");
-        var strigChar = String.fromCharCode(!e.charCode ? e.which : e.charCode);
-        if (regex.test(strigChar)) {
-            return true;
-        }
-        return false
-    });
-
-
-
-    $("#btnSave").click(function (e) {
-        debugger;
-        e.preventDefault();
-
-        var _code = $("#Code").val();
-        var _GroupID = $("#GroupID option:selected").val();
-        var _CompanyName = $("#CompanyName").val();
-        var _TRN = $("#TRN").val();
-        var _LocationMapUrl = $("#LocationMapUrl").val();
-        var _Email = $("#Email").val();
-        var _Address = $("#Address").val();
-        var _companyId = $("#HDFID").val();
-        var _CurrentCount = $("#HDFCurrentCount").val();
-        var _IsActive = $("#IsActive option:selected").val();
-
-        if (_code != "" && _GroupID != "" && _CompanyName != "" && _TRN != "" && _Email != "" && _Address != "") {
-
-            var ProductListArr = [];
-            var ProductList = {
-                Id: _companyId,
-                CurrentCount: _CurrentCount,
-                Code: _code,
-                GroupID: _GroupID,
-                CompanyName: _CompanyName,
-                Address: _Address,
-                TRN: _TRN,
-                Email: _Email,
-                LocationMapUrl: _LocationMapUrl,
-                IsActive: _IsActive
-
-            };
-            //ProductListArr.push(ProductList);
-
-            if (confirm("Are you sure you want to continue ?")) {
-                $.ajax({
-                    type: 'POST',
-                    url: '/CompanyMaster/SaveCompanyMaster',
-                    data: JSON.stringify(ProductList),
-                    contentType: "application/json; charset=utf-8",
-                    dataType: 'json',
-                    success: function (data) {
-                        debugger;
-                        if (data == "1") {
-                            debugger;
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Saved",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-                                    var url = "/CompanyMaster/Index";
-                                    window.location.href = url;
-                                } else {
-
-                                }
-                            });
-
-                        }
-                        else if (data == "2") {
-
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Updated",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-                                    var url = "/CompanyMaster/Index";
-                                    window.location.href = url;
-                                } else {
-
-                                }
-                            });
-                        }
-                        else if (data == "4") {
-                            swal("Warning", "This Code is Already Exist !", "warning");
-                        } else {
-
-                            swal("Warning", "Record not save!", "warning");
-                        }
-
-                    },
-                    error: function (httpResponse) {
-
-                        swal("Warning", "Something Went to Wrong!", "warning");
-
-                    }
-                })
-            }
-        }
-        else {
-
-            if (_code == "") {
-                swal("Warning", "Please Enter Code !", "warning");
-                return false;
-            }
-            if (_GroupID == "") {
-                swal("Warning", "Please Select Group Name!", "warning");
-                return false;
-            }
-            if (_CompanyName == "") {
-                swal("Warning", "Please Enter Company Name!", "warning");
-                return false;
-            }
-            if (_TRN == "") {
-                swal("Warning", "Please Enter TRN !", "warning");
-                return false;
-            }
-
-            if (_Email == "") {
-                swal("Warning", "Please Enter Email Address!", "warning");
-                $("#Email").val('');
-                return false;
-            }
-            if (_Address == "") {
-                swal("Warning", "Please Enter Address!", "warning");
-                return false;
-            }
-        }
-
+        BindDepartment();
     })
 
-    $("#Email").change(function () {
-        debugger;
-        var inputvalues = $(this).val();
-        var regex = /^([a-zA-Z0-9_\.\-\+])+\@@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-
-        // const regex =/^([a-zA-Z0-9_\.\-\+])+\@@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-
-        if (!regex.test(inputvalues)) {
-            swal("Warning", "Invalid Email Please Enter Valid Email!", "warning");
-            $("#Email").val("");
-            return regex.test(inputvalues);
-        }
-    });
-
-    $('#CompanyLogo').change(function () {
-        debugger;
-        // Checking whether FormData is available in browser
-        if (window.FormData !== undefined) {
-
-            var fileUpload = $("#CompanyLogo").get(0);
-            var files = fileUpload.files;
-
-            // Create FormData object
-            var fileData = new FormData();
-
-            // Looping over all files and add it to FormData object
-            for (var i = 0; i < files.length; i++) {
-                fileData.append(files[i].name, files[i]);
-            }
-
-            // Adding one more key to FormData object
-            fileData.append('username', 'Manas');
-
-            $.ajax({
-                url: '/CompanyMaster/UploadLogo',
-                type: "POST",
-                contentType: false, // Not to set any content header
-                processData: false, // Not to process data
-                data: fileData,
-                success: function (result) {
-
-                    if (result == "File size Should Be UpTo 7 KB !") {
-
-                        $("#CompanyLogo").val("");
-                        swal("Warning", result, "warning")
-                    }
-                    else {
-
-
-                    }
-                },
-                error: function (err) {
-                    alert(err.statusText);
-                }
-            });
-        } else {
-            alert("FormData is not supported.");
-        }
-    });
-
 </script>
-
-
