--- a/MassAutoGarage/Views/HRMS_Employee/Employee.cshtml
+++ b/MassAutoGarage/Views/HRMS_Employee/Employee.cshtml
@@ -685,7 +685,7 @@
                 <br /><br />
                 <div class="col-xxl-12 col-md-12">
                     <div class="form-floating" style="float: right; padding-right: 2%;">
-                        <input type="button" value="Save" id="btnSave" class="btn btn-primary" />
+                        <input type="button" value="Save" id="btnsave" class="btn btn-primary" />
                         <a href="/HRMS_Employee/Employee" class="btn btn-danger">Reset</a>
                     </div>
                 </div>
